--- a/mgmt/edge-k8s-clusters.yaml
+++ b/mgmt/edge-k8s-clusters.yaml
@@ -1,13 +1,13 @@
 key:
   clusters:
     # - name: littlelab1-dev
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.28.41
     #   cluster: cluster1
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster1
     # - name: littlelab1-stage
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.28.42
     #   cluster: cluster1
     #   prismcentral: littlelab1
@@ -15,242 +15,242 @@ key:
 
 
     - name: littlelab1-1
-      version: v1.28.0
+      version: v1.26.7
       controlplane_ip: 10.50.28.11
       cluster: cluster1
       prismcentral: littlelab1
       subnet: vlan.145-cluster1
     - name: littlelab1-2
-      version: v1.28.0
+      version: v1.26.7
       controlplane_ip: 10.50.28.12
       cluster: cluster1
       prismcentral: littlelab1
       subnet: vlan.145-cluster1
     - name: littlelab1-3
-      version: v1.28.0
+      version: v1.26.7
       controlplane_ip: 10.50.28.13
       cluster: cluster1
       prismcentral: littlelab1
       subnet: vlan.145-cluster1
     - name: littlelab1-4
-      version: v1.28.0
+      version: v1.26.7
       controlplane_ip: 10.50.28.14
       cluster: cluster1
       prismcentral: littlelab1
       subnet: vlan.145-cluster1
     - name: littlelab1-5
-      version: v1.28.0
+      version: v1.26.7
       controlplane_ip: 10.50.28.15
       cluster: cluster1
       prismcentral: littlelab1
       subnet: vlan.145-cluster1
     - name: littlelab1-6
-      version: v1.28.0
+      version: v1.26.7
       controlplane_ip: 10.50.28.16
       cluster: cluster1
       prismcentral: littlelab1
       subnet: vlan.145-cluster1
     - name: littlelab1-7
-      version: v1.28.0
+      version: v1.26.7
       controlplane_ip: 10.50.28.17
       cluster: cluster1
       prismcentral: littlelab1
       subnet: vlan.145-cluster1
     - name: littlelab1-8
-      version: v1.28.0
+      version: v1.26.7
       controlplane_ip: 10.50.28.18
       cluster: cluster1
       prismcentral: littlelab1
       subnet: vlan.145-cluster1
     - name: littlelab1-9
-      version: v1.28.0
+      version: v1.26.7
       controlplane_ip: 10.50.28.19
       cluster: cluster1
       prismcentral: littlelab1
       subnet: vlan.145-cluster1    
-    # - name: littlelab1-10
-    #   version: v1.28.0
-    #   controlplane_ip: 10.50.28.20
-    #   cluster: cluster1
-    #   prismcentral: littlelab1
-    #   subnet: vlan.145-cluster1
-    # - name: littlelab1-11
-    #   version: v1.28.0
-    #   controlplane_ip: 10.50.28.21
-    #   cluster: cluster1
-    #   prismcentral: littlelab1
-    #   subnet: vlan.145-cluster1
-    # - name: littlelab1-12
-    #   version: v1.28.0
-    #   controlplane_ip: 10.50.28.22
-    #   cluster: cluster1
-    #   prismcentral: littlelab1
-    #   subnet: vlan.145-cluster1
-    # - name: littlelab1-13
-    #   version: v1.28.0
-    #   controlplane_ip: 10.50.28.23
-    #   cluster: cluster1
-    #   prismcentral: littlelab1
-    #   subnet: vlan.145-cluster1
-    # - name: littlelab1-14
-    #   version: v1.28.0
-    #   controlplane_ip: 10.50.28.24
-    #   cluster: cluster1
-    #   prismcentral: littlelab1
-    #   subnet: vlan.145-cluster1
-    # - name: littlelab1-15
-    #   version: v1.28.0
-    #   controlplane_ip: 10.50.28.25
-    #   cluster: cluster1
-    #   prismcentral: littlelab1
-    #   subnet: vlan.145-cluster1
-    # - name: littlelab1-16
-    #   version: v1.28.0
-    #   controlplane_ip: 10.50.28.26
-    #   cluster: cluster1
-    #   prismcentral: littlelab1
-    #   subnet: vlan.145-cluster1
-    # - name: littlelab1-17
-    #   version: v1.28.0
-    #   controlplane_ip: 10.50.28.27
-    #   cluster: cluster1
-    #   prismcentral: littlelab1
-    #   subnet: vlan.145-cluster1
-    # - name: littlelab1-18
-    #   version: v1.28.0
-    #   controlplane_ip: 10.50.28.28
-    #   cluster: cluster1
-    #   prismcentral: littlelab1
-    #   subnet: vlan.145-cluster1
-    # - name: littlelab1-19
-    #   version: v1.28.0
-    #   controlplane_ip: 10.50.28.29
-    #   cluster: cluster1
-    #   prismcentral: littlelab1
-    #   subnet: vlan.145-cluster1
-    # - name: littlelab1-20
-    #   version: v1.28.0
+    - name: littlelab1-10
+      version: v1.26.7
+      controlplane_ip: 10.50.28.20
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1-11
+      version: v1.26.7
+      controlplane_ip: 10.50.28.21
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1-12
+      version: v1.26.7
+      controlplane_ip: 10.50.28.22
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1-13
+      version: v1.26.7
+      controlplane_ip: 10.50.28.23
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1-14
+      version: v1.26.7
+      controlplane_ip: 10.50.28.24
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1-15
+      version: v1.26.7
+      controlplane_ip: 10.50.28.25
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1-16
+      version: v1.26.7
+      controlplane_ip: 10.50.28.26
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1-17
+      version: v1.26.7
+      controlplane_ip: 10.50.28.27
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1-18
+      version: v1.26.7
+      controlplane_ip: 10.50.28.28
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1-19
+      version: v1.26.7
+      controlplane_ip: 10.50.28.29
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1-20
+      version: v1.26.7
     #   controlplane_ip: 10.50.28.30
     #   cluster: cluster1
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster1
 
     # - name: littlelab1-21
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.11
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-22
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.12
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-23
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.13
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-24
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.14
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-25
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.15
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-26
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.16
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-27
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.17
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-28
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.18
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-29
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.19
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2    
     # - name: littlelab1-30
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.20
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-31
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.21
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-32
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.22
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-33
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.23
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-34
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.24
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-35
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.25
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-36
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.26
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-37
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.27
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-38
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.28
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-39
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.29
     #   cluster: cluster2
     #   prismcentral: littlelab1
     #   subnet: vlan.145-cluster2
     # - name: littlelab1-40
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.30
     #   cluster: cluster2
     #   prismcentral: littlelab1
@@ -259,109 +259,109 @@ key:
 
 
     # # - name: littlelab2-11
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.41
     #   cluster: cluster3
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster3
     # - name: littlelab2-12
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.42
     #   cluster: cluster3
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster3
     # - name: littlelab2-13
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.43
     #   cluster: cluster3
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster3
     # - name: littlelab2-14
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.44
     #   cluster: cluster3
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster3
     # - name: littlelab2-15
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.45
     #   cluster: cluster3
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster3
     # - name: littlelab2-16
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.46
     #   cluster: cluster3
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster3
     # - name: littlelab2-17
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.47
     #   cluster: cluster3
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster3
     # - name: littlelab2-18
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.48
     #   cluster: cluster3
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster3
     # - name: littlelab2-19
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.49
     #   cluster: cluster3
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster3
     # - name: littlelab2-1
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.201
     #   cluster: cluster4
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster4
     # - name: littlelab2-2
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.202
     #   cluster: cluster4
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster4
     # - name: littlelab2-3
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.203
     #   cluster: cluster4
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster4
     # - name: littlelab2-4
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.204
     #   cluster: cluster4
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster4
     # - name: littlelab2-5
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.205
     #   cluster: cluster4
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster4
     # - name: littlelab2-6
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.206
     #   cluster: cluster4
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster4
     # - name: littlelab2-7
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.207
     #   cluster: cluster4
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster4
     # - name: littlelab2-8
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.208
     #   cluster: cluster4
     #   prismcentral: littlelab2
     #   subnet: vlan.145-cluster4
     # - name: littlelab2-9
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.50.29.209
     #   cluster: cluster4
     #   prismcentral: littlelab2
@@ -369,55 +369,55 @@ key:
 
 
     # - name: crimson-1
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.48.38.31
     #   cluster: crimson
     #   prismcentral: crimson-pc
     #   subnet: phx-routed-55-IPAM
     # - name: crimson-2
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.48.38.32
     #   cluster: crimson
     #   prismcentral: crimson-pc
     #   subnet: phx-routed-55-IPAM
     # - name: crimson-3
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.48.38.33
     #   cluster: crimson
     #   prismcentral: crimson-pc
     #   subnet: phx-routed-55-IPAM
     # - name: crimson-4
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.48.38.34
     #   cluster: crimson
     #   prismcentral: crimson-pc
     #   subnet: phx-routed-55-IPAM
     # - name: crimson-5
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.48.38.35
     #   cluster: crimson
     #   prismcentral: crimson-pc
     #   subnet: phx-routed-55-IPAM
     # - name: crimson-6
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.48.38.36
     #   cluster: crimson
     #   prismcentral: crimson-pc
     #   subnet: phx-routed-55-IPAM
     # - name: crimson-7
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.48.38.37
     #   cluster: crimson
     #   prismcentral: crimson-pc
     #   subnet: phx-routed-55-IPAM
     # - name: crimson-8
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.48.38.38
     #   cluster: crimson
     #   prismcentral: crimson-pc
     #   subnet: phx-routed-55-IPAM
     # - name: crimson-9
-    #   version: v1.28.0
+    #   version: v1.26.7
     #   controlplane_ip: 10.48.38.39
     #   cluster: crimson
     #   prismcentral: crimson-pc
