--- a/apps/workload-applicationset.yaml
+++ b/apps/workload-applicationset.yaml
@@ -12,6 +12,9 @@ spec:
   template:
     metadata:
       name: '{{name}}-workload'
+      labels: 
+        cd-component: workload
+        environment: '{{name}}'
     spec:
       syncPolicy:
         automated:
@@ -20,6 +23,6 @@ spec:
       source:
         repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd.git'
         path: workload
-        targetRevision: main
+        targetRevision: test1
       destination:
         server: '{{server}}'
