--- a/apps/infrastructure-integration.yaml
+++ b/apps/infrastructure-integration.yaml
@@ -45,10 +45,10 @@ spec:
               value: |
                 cluster:
                   name: "{{.name}}"
-                  prismcentral: "{{.prismcentral}}"
-                  user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
-                  pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
-                  endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
+                  prismcentral: "{{.name}}"
+                  user: <path:secret/data/prismcentral/{{.name}}#user>
+                  pass: <path:secret/data/prismcentral/{{.name}}#pass>
+                  endpoint: <path:secret/data/prismcentral/{{.name}}#endpoint>
       - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
         path: 'common-helm-charts/crossplane-infrastructure/images'
         targetRevision: 'crossplane-update'
@@ -59,6 +59,6 @@ spec:
               value: |
                 cluster:
                   name: "{{.name}}"
-                  user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
-                  pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
-                  endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
+                  user: <path:secret/data/prismcentral/{{.name}}#user>
+                  pass: <path:secret/data/prismcentral/{{.name}}#pass>
+                  endpoint: <path:secret/data/prismcentral/{{.name}}#endpoint>
