--- a/apps/full-integration.yaml
+++ b/apps/full-integration.yaml
@@ -35,20 +35,20 @@ spec:
         namespace: '{{.name}}'
         server: 'https://kubernetes.default.svc'
       sources:
-      - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
-        path: 'common-helm-charts/crossplane-infrastructure/provider'
-        targetRevision: 'crossplane-update'
-        plugin:
-          name: argocd-vault-plugin-helm
-          env:
-            - name: HELM_VALUES
-              value: |
-                cluster:
-                  name: "{{.name}}"
-                  prismcentral: "{{.prismcentral}}"
-                  user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
-                  pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
-                  endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
+      # - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
+      #   path: 'common-helm-charts/crossplane-infrastructure/provider'
+      #   targetRevision: 'crossplane-update'
+      #   plugin:
+      #     name: argocd-vault-plugin-helm
+      #     env:
+      #       - name: HELM_VALUES
+      #         value: |
+      #           cluster:
+      #             name: "{{.name}}"
+      #             prismcentral: "{{.prismcentral}}"
+      #             user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
+      #             pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
+      #             endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
       - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
         path: 'common-helm-charts/crossplane-infrastructure/category'
         targetRevision: 'crossplane-update'
@@ -58,7 +58,7 @@ spec:
             - name: HELM_VALUES
               value: |
                 cluster:
-                  name: "{{.name}}"
+                  name: "{{.prismcentral}}"
                   prismcentral: "{{.prismcentral}}"
                   user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
                   pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
@@ -72,7 +72,7 @@ spec:
             - name: HELM_VALUES
               value: |
                 cluster:
-                  name: "{{.name}}"
+                  name: "{{.prismcentral}}"
                   prismcentral: "{{.prismcentral}}"
                   user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
                   pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
