--- a/apps/infrastructure-integration.yaml
+++ b/apps/infrastructure-integration.yaml
@@ -62,3 +62,8 @@ spec:
                   user: <path:secret/data/prismcentral/{{.name}}#user>
                   pass: <path:secret/data/prismcentral/{{.name}}#pass>
                   endpoint: <path:secret/data/prismcentral/{{.name}}#endpoint>
+                images:
+                - name: ubuntu-2204-kube-v1.27.4
+                  url: https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.27.4.qcow2
+                - name: ubuntu-2204-kube-v1.26.7
+                  url: https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.26.7.qcow2
