--- a/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
+++ b/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
@@ -9,34 +9,16 @@ spec:
   forProvider:
     source: Inline
     module: |
-      # resource "nutanix_image" "source_image_1_28" {
 
-      #   provider = nutanix
-
-      #   source_uri = "https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.28.0.qcow2"
-      #   name = "ubuntu-2204-kube-v1.28.0"
-      # }
-      resource "nutanix_image" "source_image" {
+      {{- range $v := .Values.images }}
+      resource "nutanix_image" "{{ $v.name }}" {
 
         provider = nutanix
 
-        source_uri = "https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.27.4.qcow2"
-        name = "ubuntu-2204-kube-v1.27.4"
+        source_uri = "{{ $v.url }}"
+        name = "{{ $v.name }}"
       }
-      resource "nutanix_image" "source_image_1_26" {
-
-        provider = nutanix
-
-        source_uri = "https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.26.7.qcow2"
-        name = "ubuntu-2204-kube-v1.26.7"
-      }
-      # resource "nutanix_image" "source_image_1_25" {
-
-      #   provider = nutanix
-
-      #   source_uri = "https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.25.12.qcow2"
-      #   name = "ubuntu-2204-kube-v1.25.12"
-      # }
+      {{- end }}
       
   providerConfigRef:
     name: {{ .Values.cluster.prismcentral }}-providerconfig
