--- a/apps/full-integration.yaml
+++ b/apps/full-integration.yaml
@@ -10,7 +10,7 @@ spec:
       generators:
       - git:
           repoURL: https://github.com/wolfganghuse/edge-k8s-argocd.git
-          revision: littelab1-small-1.26
+          revision: littlelab1-demo
           files:
           - path: mgmt/edge-k8s-clusters.yaml
       - list:
@@ -35,23 +35,23 @@ spec:
         namespace: '{{.name}}'
         server: 'https://kubernetes.default.svc'
       sources:
-      - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
-        path: 'common-helm-charts/crossplane-infrastructure/provider'
-        targetRevision: 'main'
-        plugin:
-          name: argocd-vault-plugin-helm
-          env:
-            - name: HELM_VALUES
-              value: |
-                cluster:
-                  name: "{{.name}}"
-                  prismcentral: "{{.prismcentral}}"
-                  user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
-                  pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
-                  endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
+      # - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
+      #   path: 'common-helm-charts/crossplane-infrastructure/provider'
+      #   targetRevision: 'crossplane-update'
+      #   plugin:
+      #     name: argocd-vault-plugin-helm
+      #     env:
+      #       - name: HELM_VALUES
+      #         value: |
+      #           cluster:
+      #             name: "{{.name}}"
+      #             prismcentral: "{{.prismcentral}}"
+      #             user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
+      #             pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
+      #             endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
       - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
         path: 'common-helm-charts/crossplane-infrastructure/category'
-        targetRevision: 'test1'
+        targetRevision: 'crossplane-update'
         plugin:
           name: argocd-vault-plugin-helm
           env:
@@ -65,7 +65,7 @@ spec:
                   endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
       - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
         path: 'common-helm-charts/crossplane-infrastructure/flow'
-        targetRevision: 'main'
+        targetRevision: 'crossplane-update'
         plugin:
           name: argocd-vault-plugin-helm
           env:
