--- a/apps/infrastructure-integration.yaml
+++ b/apps/infrastructure-integration.yaml
@@ -34,10 +34,10 @@ spec:
         name: ''
         namespace: '{{.name}}'
         server: 'https://kubernetes.default.svc'
-      source:
-        path: 'common-helm-charts/crossplane-infrastructure/images'
-        repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
-        targetRevision: 'main'
+      sources:
+      - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
+        path: 'common-helm-charts/crossplane-infrastructure/provider'
+        targetRevision: 'crossplane-update'
         plugin:
           name: argocd-vault-plugin-helm
           env:
@@ -45,6 +45,29 @@ spec:
               value: |
                 cluster:
                   name: "{{.name}}"
+                  prismcentral: "{{.name}}"
                   user: <path:secret/data/prismcentral/{{.name}}#user>
                   pass: <path:secret/data/prismcentral/{{.name}}#pass>
                   endpoint: <path:secret/data/prismcentral/{{.name}}#endpoint>
+      - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
+        path: 'common-helm-charts/crossplane-infrastructure/images'
+        targetRevision: 'crossplane-update'
+        plugin:
+          name: argocd-vault-plugin-helm
+          env:
+            - name: HELM_VALUES
+              value: |
+                cluster:
+                  prismcentral: "{{.name}}"
+                  user: <path:secret/data/prismcentral/{{.name}}#user>
+                  pass: <path:secret/data/prismcentral/{{.name}}#pass>
+                  endpoint: <path:secret/data/prismcentral/{{.name}}#endpoint>
+                images:
+                - name: ubuntu-2204-kube-v1.28.0
+                  url: https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.28.0.qcow2
+                - name: ubuntu-2204-kube-v1.27.4
+                  url: https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.27.4.qcow2
+                - name: ubuntu-2204-kube-v1.26.7
+                  url: https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.26.7.qcow2
+                - name: ubuntu-2204-kube-v1.25.12
+                  url: https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.25.12.qcow2
