--- a/apps/full-integration.yaml
+++ b/apps/full-integration.yaml
@@ -51,7 +51,7 @@ spec:
       #             endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
       - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
         path: 'common-helm-charts/crossplane-infrastructure/category'
-        targetRevision: 'crossplane-update'
+        targetRevision: 'main'
         plugin:
           name: argocd-vault-plugin-helm
           env:
@@ -65,7 +65,7 @@ spec:
                   endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
       - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
         path: 'common-helm-charts/crossplane-infrastructure/flow'
-        targetRevision: 'crossplane-update'
+        targetRevision: 'main'
         plugin:
           name: argocd-vault-plugin-helm
           env:
