--- a/apps/capxonly-integration.yaml
+++ b/apps/capxonly-integration.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: capx-applicationset
+  name: capxonly-applicationset
   namespace: argocd
 spec:
   goTemplate: true
@@ -10,7 +10,7 @@ spec:
       generators:
       - git:
           repoURL: https://github.com/wolfganghuse/edge-k8s-argocd.git
-          revision: littlelab1-small-1.26
+          revision: littlelab1-large-1.26
           files:
           - path: mgmt/edge-k8s-clusters.yaml
       - list:
@@ -18,7 +18,7 @@ spec:
           elementsYaml: "{{ .key.clusters | toJson }}"
   template:
     metadata:
-      name: '{{.name}}'
+      name: '{{.name}}-capxonly'
       labels: 
         cd-component: capx
         environment: '{{.name}}'
